# agentic-data-modeling-studio

./: .gitattributes  .gitignore  AGENTS.md  README.md  databricks.yml  pyproject.toml  uv
.slice_runs/: episodic_memory.json  store_run1.json
config/: NOTEBOOK_UPDATES.md  env_config.yaml  proof_slice.yaml
contracts/: CONTRACT_INVENTORY.md  INCREMENT_1_BUILDER_HANDOFF.md  INCREMENT_1_GOVERNANCE_REVIEW.md  README.md  _common.schema.json  analytical_requirement.schema.json  artifact_dependency.schema.json  artifact_version.schema.json  business_rule.schema.json  business_term.schema.json  context_snapshot.schema.json  document_set.schema.json  engagement.schema.json  evidence_item.schema.json  evidence_set.schema.json  lineage_edge.schema.json  open_question.schema.json  profile_evidence.schema.json  profile_snapshot.schema.json  relationship_candidate.schema.json  reporting_requirement.schema.json  requirement_set.schema.json  review_decision.schema.json  review_item.schema.json  skill_resolution.schema.json  solution_run.schema.json  source_attribute_observation.schema.json  source_dictionary_attribute.schema.json  source_dictionary_code_value.schema.json  source_dictionary_handoff.schema.json  source_dictionary_object.schema.json  source_dictionary_relationship.schema.json  source_object_observation.schema.json  source_snapshot.schema.json  validation_finding.schema.json  work_package.schema.json
ddl/: artifact_version.sql  context_snapshot.sql  document_set.sql  open_question.sql  relationship_candidate.sql  reporting_requirement.sql  solution_run.sql  (+4 more)
(+303 files in other folders)
